--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>翁武贤的个人站</title>
+	<title></title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link rel="stylesheet" type="text/css" href="css/jquery.fullPage.css">
 	<script src="js/main.js"></script>
@@ -60,7 +60,9 @@
 	                    <li><img src="image/img2.jpg"></li>
 	                    <li><img src="image/img3.jpg"></li>
 	                    <li><img src="image/img4.jpg"></li>
-	                </ul>      
+	                </ul>
+	                <div class="about-but prev" id="prev"></div>    
+	                <div class="about-but next" id="next"></div>  
 	            </div>
 			</div>
 		</div>
