--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title></title>
+	<title>翁武贤的个人站</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link rel="stylesheet" type="text/css" href="css/jquery.fullPage.css">
+	<link rel="shortcut icon" href="image/favicon.ico"/>
+	<link rel="bookmark" href="image/favicon.ico"/>
 	<script src="js/main.js"></script>
 	<script src="js/jquery-1.8.3.min.js"></script>
 	<script src="js/jquery.fullPage.js"></script>
@@ -17,7 +19,7 @@
 				menu: '#menu'
 			});
 		});
-</script>
+	</script>
 </head>
 <body>
 	<!-- 侧边栏导航 -->
